fix about on mobile

--- a/src/styles/about_content.css
+++ b/src/styles/about_content.css
@@ -2,6 +2,7 @@
   grid-area: content;
   padding: 10px;
   display: flex;
+  flex-direction: column;
 }
 
 .AboutContent-imageContainer {
